--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "type": "commonjs",
+  "type": "module",
   "name": "crm-app",
   "version": "1.0.0",
   "description": "API CRM",
@@ -8,12 +8,15 @@
     "start": "node src/server.js",
     "test": "jest",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "debug": "node --inspect src/server.js"
   },
   "dependencies": {
     "api": "file:",
     "crm-app": "file:",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
