Id unica para clientes, pedidos e revenda

--- a/api/package.json
+++ b/api/package.json
@@ -16,7 +16,8 @@
     "crm-app": "file:",
     "express": "^4.21.2",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
